--- a/Web_ML/index.html
+++ b/Web_ML/index.html
@@ -106,7 +106,7 @@
 			</div>
 			</div>
 			<div class="center">
-				<input class="button" type="submit" value="GO" onclick="takeData()"/>
+				<input id="btn" class="button" disabled type="submit" value="GO" onclick="takeData()"/>
 			</div>
       </header>
 	
